<resources>
    <string name="app_name">chatApp</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="pass2">Enter password again</string>
    <string name="login_server">server</string>
    <string name="login_LOG_IN">Login</string>
    <string name="login_new_to_chatapp">New to ChatApp?</string>
    <string name="login_new_on_chatapp">New On ChatAPP?</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_now">Register Now</string>
    <string name="addchat_add">Add</string>
    <string name="register">Create New Account</string>
    <string name="member">Already A Member? Login</string>
    <string name="welcome">Welcome Back!</string>
    <string name="send">SEND</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="BaseUrl">http://10.0.2.2:7149/api/</string>
    <string name="settings">settings</string>
    <string name="title_activity_bbbbb">bbbbb</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>